--- a/src/app/modules/portfolio/components/profile-page/profile-page.component.html
+++ b/src/app/modules/portfolio/components/profile-page/profile-page.component.html
@@ -9,7 +9,7 @@
 
         <div class="d-flex flex-column align-items-center gap-05-0 fs-20">
             <span class="fs-32">
-                Spidy_8096
+                {{profile.name}}
             </span>
             <div class="social-media-container d-flex gap-0-05">
                 <span class="icon-container">
@@ -43,7 +43,7 @@
                         Mobile No
                     </span>
                     <span class="heading">
-                        8096391184
+                        {{profile.phone}}
                     </span>
 
                 </div>
@@ -57,7 +57,7 @@
                         Email ID
                     </span>
                     <span class="heading">
-                        bal32499@gmail.com
+                        {{profile.email}}
                     </span>
 
                 </div>
@@ -71,7 +71,7 @@
                         Location
                     </span>
                     <span class="heading">
-                        Hyderabad
+                        {{profile.location}}
                     </span>
 
                 </div>
@@ -85,7 +85,7 @@
                         Date of Birth
                     </span>
                     <span class="heading">
-                        10-04-1999
+                        {{profile.dateOfBirth}}
                     </span>
 
                 </div>
